fix language/country interface
not the language but a geographic country is of interest for a crawl.
so we let the user specify countries, not languages,
and map those to a set of languages
