# controller/src/api/controllers/Capabilities.js
@@ -1,14 +1,24 @@
 'use strict'
 
-var utils = require('../utils/writer.js')
+var { writeJson, respondWithCode } = require('../utils/writer.js')
 var Capabilities = require('../service/CapabilitiesService')
 
 module.exports.getLanguages = function getLanguages (req, res, next) {
   Capabilities.getLanguages()
     .then(function (response) {
-      utils.writeJson(res, response)
+      writeJson(res, response)
     })
-    .catch(function (response) {
-      utils.writeJson(res, response)
+    .catch(function (err) {
+      writeJson(res, respondWithCode(500, err.message))
+    })
+}
+
+module.exports.getCountries = function getCountries (req, res, next) {
+  Capabilities.getCountries()
+    .then(function (response) {
+      writeJson(res, response)
+    })
+    .catch(function (err) {
+      writeJson(res, respondWithCode(500, err.message))
     })
 }
